2014-09-19  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64.md (stack_protect_test_<mode>): Mark
	scratch register as written.

2014-09-19  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_emit_epilogue): Remove bogus
	assignment.

2014-09-19  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md ("trunctdsd2", "extendsdtd2"): New
	expanders.

2014-09-19  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	PR target/62662
	* config/s390/s390.c (s390_emit_epilogue): When doing the return
	address load optimization force s390_optimize_prologue to leave it
	that way.  Only do the optimization if we already decided to push
	r14 into a stack slot.

2014-09-19  Marat Zakirov  <m.zakirov@samsung.com>

	* asan.c (build_check_stmt): Alignment arg was added.
	(asan_expand_check_ifn): Optimization for alignment >= 8.

2014-09-19  Olivier Hainque  <hainque@adacore.com>

	* config/i386/vxworksae.h: Remove obsolete definitions.
	(STACK_CHECK_PROTECT): Define.
	* config/i386/vx-common.h: Remove.  Merge contents within
	config/i386/vxworks.h.
	* config.gcc (i?86-vxworks*): Use i386/vxworks.h instead of
	i386/vx-common.h.

2014-09-19  Olivier Hainque  <hainque@adacore.com>

	* config.gcc (powerpc-wrs-vxworksmils): New configuration.
	* config/rs6000/t-vxworksmils: New file.
	* config/rs6000/vxworksmils.h: New file.

2014-09-19  Olivier Hainque  <hainque@adacore.com>

	* varasm.c (default_section_type_flags): Flag .persistent.bss
	sections as SECTION_BSS.

2014-09-19  Nick Clifton  <nickc@redhat.com>

	* config/rl78/rl78.c (rl78_expand_epilogue): Generate a USE of the
	pop'ed registers so that DCE does not eliminate them.

2014-09-18  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/63298
	* ipa-devirt.c (odr_subtypes_equivalent_p): Fix thinko in a condition.

2014-09-18  Joseph Myers  <joseph@codesourcery.com>

	* system.h (LIBGCC2_TF_CEXT): Poison.
	* config/i386/cygming.h (LIBGCC2_TF_CEXT): Remove.